--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css " />
 </head>
 
 <body>
     <header>
-        <img src=".\images\logo_header.png" class="logo" alt="logo">
+        <img src=".\images\Logo_header_p1.png" class="logo" alt="logo">
         <nav>
             <ul style="list-style: none;">
-                <li>Product</li>
-                <li>Services</li>
-                <li>About</li>
-                <button class="btn">
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <button class="btn btn-basic">
                     Log in
                 </button>
             </ul>
@@ -35,8 +38,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta molestiae, ex magnam nam
                         mollitia.</p>
                     <div class="buttons">
-                        <button class="btn btn1">Buy template</button>
-                        <button class="btn btn2">Explore</button>
+                        <button class="btn btn-dark">Buy template</button>
+                        <button class="btn btn-basic">Explore</button>
                     </div>
                 </div>
     
