Add the rest sections and footer

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
                 <div class="left">
                     <img src=".\images\manOnPhone_p3.png" class="man" alt="man">
-                    <!-- <img src=".\images\graph_income_p3.png" class="income" alt="income"> -->
+                    <img src=".\images\graph_income_p3.png" class="income" alt="income">
                 </div>
                 <div class="right">
                     <h1>We connect our customers with the best, and helo them keep up-and stay open. </h1>
-                    <p><img src=".\images\check.svg" class="check"alt="">
+                    <p><img src=".\images\check.svg" class="check" alt="">
                         We connect our customers with the best.</p>
                     <p><img src=".\images\check.svg" class="check" alt="">
                         Advisor success customer launch party.</p>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="right">
                     <img src=".\images\womanOnPhone_p4.png" class="woman" alt="woman">
-                    <!-- <img src=".\images\pie_chart_p4.png" class="pie" alt="pie"> -->
+                    <img src=".\images\pie_chart_p4.png" class="pie" alt="pie">
                 </div>
             </section>
 
@@ -131,49 +131,168 @@
                 <div class="top">
                     <h1>An enterprise template to ramp up your company website</h1>
                     <div class="btns">
-                        <button class="btn btn-basic circle">.</button>
-                        <button class="btn btn-basic">.</button>
+                        <button class="btn btn-basic">◀</button>
+                        <button class="btn btn-basic">▶</button>
                     </div>
                 </div>
 
                 <div class="comments">
                     <div class="com com1">
-                        <p></p>
                         <div class="avatar">
-                            <img src=".\images\Albus_p5.png" alt="">
-                            <div class="person">
-                                <p>name</p>
-                                <p>status</p>
+                            <h3>"Buyer buzz partner network disruptive non-disclosure agreement business"</h3>
+                            <div class="author">
+                                <img src=".\images\Albus_p5.png" alt="">
+                                <div class="person">
+                                    <p>name</p>
+                                    <p>status</p>
+                                </div>
                             </div>
-                            
+
+
+
                         </div>
                     </div>
                     <div class="com com1">
-                        <p></p>
                         <div class="avatar">
-                            <img src=".\images\Severus_p5.png" alt="">
-                            <div class="person">
-                                <p>name</p>
-                                <p>status</p>
+                            <h3>"Learning curve infrastucture value proposition advisor strategy user experience
+                                hepotheses investor"</h3>
+                            <div class="author">
+                                <img src=".\images\Severus_p5.png" alt="">
+                                <div class="person">
+                                    <p>name</p>
+                                    <p>status</p>
+                                </div>
                             </div>
+
+
                         </div>
                     </div>
                     <div class="com com1">
-                        <p></p>
                         <div class="avatar">
-                            <img src=".\images\Harry_p5.png" alt="">
-                            <div class="person">
-                                <p>name</p>
-                                <p>status</p>
+                            <h3>"Release facebook responsive web desighn businnes model canvas seed money monetization."
+                            </h3>
+                            <div class="author">
+                                <img src=".\images\Harry_p5.png" alt="">
+                                <div class="person">
+                                    <p>name</p>
+                                    <p>status</p>
+                                </div>
                             </div>
+
+
                         </div>
                     </div>
 
                 </div>
 
             </section>
+            <section class="help">
+                <img src=".\images\help_p6.png" alt="">
+                <div class="text">
+                    <h1>We connect our customers with the best, and help them keep up and syat open.</h1>
+                    <div class="qustions">
+                        <p>We connect our customers with the best?</p>
+                        <hr>
+                        <p>Android research & development rockstar?</p>
+                        <hr>
+                    </div>
+
+                </div>
+            </section>
+
+            <section id="services" class="blog light-them">
+                <p>Our Blog</p>
+                <h1>Value proposition accelerating product managment venture</h1>
+                <div class="pics">
+                    <div class=" card card1">
+
+
+                        <img src=".\images\Category1_p7.png" alt="cool">
+                        <div class="category">
+                            <h5>Category</h5>
+                            <h5 class="date">November 22, 2021</h5>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum!</p>
+                        <div class="author">
+                            <img src=".\images\Harry_p5.png" alt="">
+                            <p>name</p>
+                        </div>
+                    </div>
+                    <div class="card card2">
+
+                        <img src=".\images\Category2_p7.png" alt="cooler">
+                        <div class="category">
+                            <h5>Category</h5>
+                            <h5 class="date">November 22, 2021</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, cupiditate.</p>
+                        <div class="author">
+                            <img src=".\images\Harry_p5.png" alt="">
+                            <p>name</p>
+                        </div>
+                    </div>
+                    <div class="card card3">
+
+                        <img src=".\images\Category3_p7.png" alt="cool2">
+                        <div class="category">
+                            <h5>Category</h5>
+                            <h5 class="date">November 22, 2021</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, accusamus.</p>
+                        <div class="author">
+                            <img src=".\images\Harry_p5.png" alt="">
+                            <p>name</p>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="btn btn-basic">Load more</button>
+            </section>
+            <section class="last dark-them">
+                <h1>An enterprise template to ramp up your company website</h1>
+                <div class="email">
+                    <form>
+                        <label for="email"></label>
+                        <input type="email" id="email" name="email" placeholder="Your email">
+                    </form>
+                    <button class="btn btn-green">Start now</button>
+
+
+                </div>
+
+
+            </section>
+
+
         </main>
         <footer>
+            <div class="left">
+                <img src=".\images\Logo_header_p1.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sed perspiciatis vitae obcaecati delectus nulla!</p>
+                <p>Allrights reserved.</p>
+            </div>
+
+            <div class="right">
+                <ul class="lists">
+                    <li><a href="#services">Landings</a></li>
+                    <li>Home</li>
+                    <li>Product</li>
+                    <li>Services</li>
+                </ul>
+                <ul class="lists2">
+                    <li>Company</li>
+                    <li>Home</li>
+                    <li>Carees</li>
+                    <li>Services</li>
+                </ul>
+                <ul class="lists3">
+                    <li>Resources</li>
+                    <li>Blog</li>
+                    <li>Products</li>
+                    <li>Services</li>
+                </ul>
+            </div>
+
 
 
         </footer>
