redirect to sections and make style corrections

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <img src=".\images\Logo_header_p1.png" class="logo" alt="logo">
             <nav>
                 <ul style="list-style: none;">
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#product">Product</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#help">About</a></li>
                     <button class="btn btn-basic">
                         Log in
                     </button>
@@ -60,7 +60,7 @@
                 <img src=".\images\Logos_bottom_p1.png" class="logos" alt="logos">
             </section>
 
-            <section class="services dark-them">
+            <section id="services" class="services dark-them">
                 <p>Our services</p>
                 <h1>Handshake infographic mass market crowdfunding iteration</h1>
                 <div class="pics">
@@ -87,7 +87,7 @@
 
             </section>
 
-            <section class="connect customer1">
+            <section id="company" class="connect customer1">
 
                 <div class="left">
                     <img src=".\images\manOnPhone_p3.png" class="man" alt="man">
@@ -108,16 +108,16 @@
 
             </section>
 
-            <section class="connect customer2">
+            <section id="landings" class="connect customer2">
 
 
                 <div class="left">
                     <h1>We connect our customers with the best, and helo them keep up-and stay open. </h1>
-                    <p class="dark"><img src=".\images\feather.svg" alt="">
+                    <p class="dark-them"><img src=".\images\feather.svg"  class="icons" alt="">
                         We connect our customers with the best.</p>
-                    <p><img src=".\images\star.svg" alt="">
+                    <p><img src=".\images\star.svg"  class="icons" alt="">
                         Advisor success customer launch party.</p>
-                    <p><img src=".\images\sun.svg" alt="">
+                    <p><img src=".\images\sun.svg"  class="icons" alt="">
                         Business-to-consumer long tail.</p>
                     <button class="btn btn-dark">Start now</button>
                 </div>
@@ -127,7 +127,7 @@
                 </div>
             </section>
 
-            <section class="enterprise dark-them">
+            <section id="product"class="enterprise dark-them">
                 <div class="top">
                     <h1>An enterprise template to ramp up your company website</h1>
                     <div class="btns">
@@ -186,11 +186,11 @@
                 </div>
 
             </section>
-            <section class="help">
+            <section id="help" class="help">
                 <img src=".\images\help_p6.png" alt="">
                 <div class="text">
                     <h1>We connect our customers with the best, and help them keep up and syat open.</h1>
-                    <div class="qustions">
+                    <div class="questions">
                         <p>We connect our customers with the best?</p>
                         <hr>
                         <p>Android research & development rockstar?</p>
@@ -200,7 +200,7 @@
                 </div>
             </section>
 
-            <section id="services" class="blog light-them">
+            <section id="blog" class="blog light-them">
                 <p>Our Blog</p>
                 <h1>Value proposition accelerating product managment venture</h1>
                 <div class="pics">
@@ -248,7 +248,7 @@
                 </div>
                 <button class="btn btn-basic">Load more</button>
             </section>
-            <section class="last dark-them">
+            <section id="resourses" class="last dark-them">
                 <h1>An enterprise template to ramp up your company website</h1>
                 <div class="email">
                     <form>
@@ -256,8 +256,6 @@
                         <input type="email" id="email" name="email" placeholder="Your email">
                     </form>
                     <button class="btn btn-green">Start now</button>
-
-
                 </div>
 
 
@@ -274,22 +272,22 @@
 
             <div class="right">
                 <ul class="lists">
-                    <li><a href="#services">Landings</a></li>
-                    <li>Home</li>
-                    <li>Product</li>
-                    <li>Services</li>
+                    <li><a href="#landings">Landings</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#product">Products</a></li>
+                    <li><a href="#services">Services</a></li>
                 </ul>
                 <ul class="lists2">
-                    <li>Company</li>
-                    <li>Home</li>
-                    <li>Carees</li>
-                    <li>Services</li>
+                    <li><a href="#company">Company</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#help">Carees</a></li>
+                    <li><a href="#services">Services</a></li>
                 </ul>
                 <ul class="lists3">
-                    <li>Resources</li>
-                    <li>Blog</li>
-                    <li>Products</li>
-                    <li>Services</li>
+                    <li><a href="#resourses">Resources</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#product">Products</a></li>
+                    <li><a href="#services">Services</a></li>
                 </ul>
             </div>
 
