Add some spaae between some parts of pages, fix images

--- a/index.html
+++ b/index.html
@@ -95,12 +95,15 @@
                 </div>
                 <div class="right">
                     <h1>We connect our customers with the best, and helo them keep up-and stay open. </h1>
-                    <p><img src=".\images\check.svg" class="check" alt="">
-                        We connect our customers with the best.</p>
-                    <p><img src=".\images\check.svg" class="check" alt="">
-                        Advisor success customer launch party.</p>
-                    <p><img src=".\images\check.svg" class="check" alt="">
-                        Business-to-consumer long tail.</p>
+                    <div class="we">
+                        <p><img src=".\images\check.svg" class="check" alt="">
+                            We connect our customers with the best.</p>
+                        <p><img src=".\images\check.svg" class="check" alt="">
+                            Advisor success customer launch party.</p>
+                        <p><img src=".\images\check.svg" class="check" alt="">
+                            Business-to-consumer long tail.</p>
+                    </div>
+                    
                     <button class="btn btn-dark">Start now</button>
                 </div>
 
@@ -113,13 +116,14 @@
 
                 <div class="left">
                     <h1>We connect our customers with the best, and helo them keep up-and stay open. </h1>
-                    <p class="dark-them"><img src=".\images\feather.svg"  class="icons" alt="">
-                        We connect our customers with the best.</p>
-                    <p><img src=".\images\star.svg"  class="icons" alt="">
-                        Advisor success customer launch party.</p>
-                    <p><img src=".\images\sun.svg"  class="icons" alt="">
-                        Business-to-consumer long tail.</p>
-                    <button class="btn btn-dark">Start now</button>
+                    <div class="we">
+                        <p class="dark-them"><img src=".\images\feather.svg"  class="icons" alt="">
+                            We connect our customers with the best.</p>
+                        <p><img src=".\images\star.svg"  class="icons" alt="">
+                            Advisor success customer launch party.</p>
+                        <p><img src=".\images\sun.svg"  class="icons" alt="">
+                            Business-to-consumer long tail.</p>
+                    </div>
                 </div>
                 <div class="right">
                     <img src=".\images\womanOnPhone_p4.png" class="woman" alt="woman">
@@ -131,8 +135,8 @@
                 <div class="top">
                     <h1>An enterprise template to ramp up your company website</h1>
                     <div class="btns">
-                        <button class="btn btn-basic">◀</button>
-                        <button class="btn btn-basic">▶</button>
+                        <button class="btn-basic arrow"><span><img src=".\images\arrow-left.svg" alt=""></span></button>
+                        <button class="btn-basic arrow"><span><img src=".\images\arrow-right.svg" alt=""></span></button>
                     </div>
                 </div>
 
@@ -266,7 +270,7 @@
         <footer>
             <div class="left">
                 <img src=".\images\Logo_header_p1.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sed perspiciatis vitae obcaecati delectus nulla!</p>
+                <p class="reserved">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sed perspiciatis vitae obcaecati delectus nulla!</p>
                 <p>Allrights reserved.</p>
             </div>
 
