update button and text size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-
+    <div class="parent" style="width: 500px">
+        <div class="child" style="width:50vw;"></div>
+    </div>
     <div style="overflow: hidden;">
         <header class="header">
             <div class="container">
@@ -66,12 +68,11 @@
                     </div>
 
                     <div class="right">
-                        <img src=".\images\graph_top.png" class="top" alt="p1">
+                        <img src=".\images\graph_top.png" class="top" alt="Graph 1">
 
                         <div class="bottom_graphs">
-                            <img src=".\images\graph_bt_left.png" class="bottom1" alt="p2">
-                            <img src=".\images\graph_bt_rigth.png" class="bottom2" alt="p3">
-
+                            <img src=".\images\graph_bt_left.png" class="bottom1" alt="Graph 2">
+                            <img src=".\images\graph_bt_rigth.png" class="bottom2" alt="Graph 3">
                         </div>
 
                     </div>
@@ -103,8 +104,6 @@
                         <p>Explore page <i class="fa fa-arrow-right"></i></p>
                     </div>
                 </div>
-
-
             </section>
 
             <section id="company" class="connect customer1">
@@ -309,7 +308,7 @@
                     <li><a href="#company" class="title">Company</a></li>
                     <li><a href="#" class="inside">Home</a></li>
                     <li><a href="#help" class="inside">Carees</a></li>
-                    <li><a href="#services class=">Services</a></li>
+                    <li><a href="#services" class="inside">Services</a></li>
                 </ul>
                 <ul class="lists3">
                     <li><a href="#resourses"class="title">Resources</a></li>
